--- a/as-wire-ui/.gitignore
+++ b/as-wire-ui/.gitignore
@@ -1,3 +1,6 @@
+######### have to ignore environment from git for security reasons
+src/environment
+
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
