--- a/as-wire-ui/.gitignore
+++ b/as-wire-ui/.gitignore
@@ -1,5 +1,5 @@
 ######### have to ignore environment from git for security reasons
-src/environment
+src/environments
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
