--- a/as-wire/src/main/webapp/env.yaml
+++ b/as-wire/src/main/webapp/env.yaml
@@ -1,6 +1,6 @@
 ---
 DATASTORE_DATASET: my-gaeapp
-DATASTORE_EMULATOR_HOST: localhost:8081
-DATASTORE_EMULATOR_HOST_PATH: localhost:8081/datastore
-DATASTORE_HOST: http://localhost:8081
+DATASTORE_EMULATOR_HOST: ::1:8776
+DATASTORE_EMULATOR_HOST_PATH: ::1:8776/datastore
+DATASTORE_HOST: http://::1:8776
 DATASTORE_PROJECT_ID: my-gaeapp
